// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directory resource e2e directory resource test: Directory create 1`] = `
Object {
  "_message": "Created directory src/image",
  "id": "src/image",
  "path": "src/image",
}
`;

exports[`directory resource e2e directory resource test: Directory create plan 1`] = `
Object {
  "currentState": "",
  "describe": "Create src/image",
  "diff": "- Original  - 0
+ Modified  + 1

+ src/image",
  "newState": "src/image",
}
`;

exports[`directory resource e2e directory resource test: Directory destroy 1`] = `
Object {
  "_message": "Created directory src/image",
  "id": "src/image",
  "path": "src/image",
}
`;

exports[`directory resource e2e directory resource test: Directory update 1`] = `
Object {
  "_message": "Created directory src/image",
  "id": "src/image",
  "path": "src/image",
}
`;

exports[`directory resource e2e directory resource test: Directory update plan 1`] = `
Object {
  "currentState": "",
  "describe": "Create src/images",
  "diff": "- Original  - 0
+ Modified  + 1

+ src/images",
  "newState": "src/images",
}
`;
